tests/invalid/expected_type.ri
fn my_fn() void { }

fn x(a: my_fn) void {}

fn main() void { }
