tests/invalid/expected_type.out
tests/invalid/expected_type.ri:3:9: error: expected type, found function
rivetc: error: could not compile package `expected_type`, aborting due to previous error